--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,3 @@
 <app-competencia-list></app-competencia-list> 
 <app-motocicleta-list></app-motocicleta-list> 
+<app-piloto-list></app-piloto-list> 
